# longfellow-zk

./: .gitignore  404.html  ERC_hiddeppk.md  README.md  index.html  index.xml  sitemap.xml
.github/workflows/: sage.yml
_print/blog/: index.html
_print/docs/: index.html
blog/: index.html  index.xml
blog/_print/: index.html
blog/news/: index.html  index.xml
blog/releases/: index.html  index.xml
categories/: index.html  index.xml
categories/examples/: index.html  index.xml
clang-build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
clang-build-release/algebra/: CTestTestfile.cmake  Makefile  cmake_install.cmake  fft_interpolation_test  fft_interpolation_test[1]_include.cmake  fft_interpolation_test[1]_tests.cmake  fft_test  fft_test[1]_include.cmake  fft_test[1]_tests.cmake  fp2_test  fp2_test[1]_include.cmake  fp2_test[1]_tests.cmake  fp_test  fp_test[1]_include.cmake  fp_test[1]_tests.cmake  interpolation_test  interpolation_test[1]_include.cmake  interpolation_test[1]_tests.cmake  limb_test  limb_test[1]_include.cmake  limb_test[1]_tests.cmake  nat_test  nat_test[1]_include.cmake  nat_test[1]_tests.cmake  poly_test  poly_test[1]_include.cmake  poly_test[1]_tests.cmake  reed_solomon_test  reed_solomon_test[1]_include.cmake  reed_solomon_test[1]_tests.cmake  rfft_test  rfft_test[1]_include.cmake  rfft_test[1]_tests.cmake  sysdep_test  utility_test  (+4 more)
docs/: index.html  index.xml  package-lock.json
js/: main.min.3dc2af9c3aada7d5fdcede68a2fccefa38d3b01ff8345a87f751224750a1cf6d.js
lib/: CMakeLists.txt
lib/CMake/: proofs.cmake
lib/algebra/: convolution.h  crt_convolution.h  fp_generic.h  reed_solomon.h
lib/arrays/: dense.h
lib/circuits/bip340/: README.md  bip340_guard.h  bip340_test.cc  bip340_verify.h  bip340_witness.h
lib/circuits/ecdsa/: verify_external_test.cc
lib/circuits/hidden_pk/: CMakeLists.txt  hidden_pk_circuit.h  hidden_pk_test.cc  hidden_pk_witness.h
lib/circuits/mdoc/: CMakeLists.txt  mdoc_attribute_ids.h  mdoc_decompress.cc  mdoc_decompress.h  mdoc_examples.h  mdoc_generate_circuit.cc  mdoc_hash.h  mdoc_revocation.h  mdoc_signature_test.cc  mdoc_test_attributes.h  mdoc_witness.h  mdoc_zk.cc  mdoc_zk.h  mdoc_zk_test.cc  zk_spec.cc
lib/circuits/sha/: hmac_circuit.h
lib/circuits/tests/sha3/: sha3_circuit.h  sha3_circuit_test.cc  sha3_reference.cc  sha3_reference.h  sha3_reference_test.cc  sha3_witness.cc  sha3_witness.h
lib/cmake-ios-stubs/: FindGTest.cmake  Findbenchmark.cmake
lib/gf2k/: lch14_reed_solomon.h  sysdep.h
lib/ligero/: ligero_param.h  ligero_prover.h  ligero_verifier.h
lib/merkle/: merkle_commitment.h  merkle_tree.h  merkle_tree_test.cc
lib/proto/: circuit.h
lib/random/: secure_random_engine.h  transcript_test.cc
lib/sumcheck/: circuit.h  prover_layers.h
lib/util/: CMakeLists.txt  aesEcb.cc  aesEcb.h  aes_ecb.cc  arena.cc  arena.h  crypto.cc  crypto.h  power_of_two.h  power_of_two_test.cc  readbuffer.h  sha256.cc
lib/zk/: zk_common.h  zk_proof.h  zk_prover.h  zk_test.cc  zk_testing.h  zk_verifier.h
spec/: draft-google-cfrg-libzk-01.html
tags/: index.html  index.xml
verify/: README.md  circuits.v
(+330 files in other folders)
